<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_title"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_id"
        android:labelFor="@id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_id"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@id/tv_id"
        app:layout_constraintStart_toEndOf="@+id/tv_address"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_name"
        android:labelFor="@id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tv_name"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        app:layout_constraintLeft_toLeftOf="@id/et_phone"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:labelFor="@id/et_phone"
        android:text="@string/tv_phone"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@id/tv_phone"
        app:layout_constraintLeft_toRightOf="@id/tv_phone"
        app:layout_constraintStart_toEndOf="@+id/tv_address"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:labelFor="@id/et_address"
        android:text="@string/tv_address"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/tv_address"
        app:layout_constraintLeft_toRightOf="@id/tv_address"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        />

    <TextView
        android:id="@+id/tv_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:labelFor="@id/sp_class"
        android:text="@string/tv_class"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_address"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/sp_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_class"
        app:layout_constraintLeft_toLeftOf="@id/et_address"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
    <Button
        android:id="@+id/bt_add_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_add_student"
        android:backgroundTint="#0066cc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_get_student"
        app:layout_constraintBottom_toBottomOf="@id/bt_get_student"
        />

    <Button
        android:id="@+id/bt_get_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_get"
        android:backgroundTint="#186923"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/sp_class"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/bt_delete_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_delete"
        android:backgroundTint="@color/design_default_color_error"
        app:layout_constraintStart_toEndOf="@id/bt_get_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/bt_get_student"
        />

    <Button
        android:id="@+id/bt_get_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_get_all"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_get_student"
        />


</androidx.constraintlayout.widget.ConstraintLayout>